# enterprise-ai-agent

./: .env.template  .gitignore  README.md  docker-compose.dev.yml  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/api/v1/: health.py
tests/unit/: test_api.py
