[tool.poetry]
name = "enterprise-ai-agent"
version = "0.1.0"
description = "A comprehensive enterprise-class AI agent for banking applications"
authors = ["Mateusz Grzyb <mwgrzyb@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "app"}]  # <-- TO JEST KLUCZOWA ZMIANA

[tool.poetry.dependencies]
python = ">=3.11"
fastapi = ">=0.116.1,<0.117.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
